GNOME Bugzilla – Bug 753537
Input Sources' window won't resize after clicking "..."
Last modified: 2015-08-18 09:22:21 UTC
When selecting my input sources (I wanted to change from English to Portuguese), I only saw English as an option, so I clicked the vertical "..." and the Portuguese option appeared. However, I couldn't see it, since the window didn't resize accordingly. I had to manually resize the window to see the new option.
Please attach a screenshot
Created attachment 309160 [details] After clicking ...
Created attachment 309161 [details] After clicking ..., after resizing
Created attachment 309165 [details] [review] region: Set a sensible height on the input chooser On systems that have only a few locales installed we might end up starting with an awkwardly small height. To avoid that we can set our initial height to be the same as the main window.
Review of attachment 309165 [details] [review]: That looks fine.
Attachment 309165 [details] pushed as 6434213 - region: Set a sensible height on the input chooser