region: Set a sensible height on the input chooser

On systems that have only a few locales installed we might end up
starting with an awkwardly small height. To avoid that we can set our
initial height to be the same as the main window.

https://bugzilla.gnome.org/show_bug.cgi?id=753537